Fix: Chosen moves aligned properly.

--- a/rock-paper-scissors/styles.css
+++ b/rock-paper-scissors/styles.css
@@ -32,6 +32,7 @@ body {
 }
 #player-selection, #computer-selection {
     font-size: 8rem;
+    text-align: center;
 }
 #computer-selection {
     transform: scale(-1, -1) rotate(90deg);
